<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <TextView android:text="@string/my_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textColor="#446b7b"
        android:id="@+id/textView" />

    <Button
        style="@style/AppBtn"
        android:layout_marginTop="40dp"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:layout_below="@+id/textView" />
    <Button
        style="@style/AppBtn"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:layout_below="@+id/button" />
    <Button
        style="@style/AppBtn"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:layout_below="@+id/button2" />
    <Button
        style="@style/AppBtn"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:layout_below="@+id/button3" />
    <Button
        style="@style/AppBtn"
        android:text="@string/materialize"
        android:id="@+id/button5"
        android:layout_below="@+id/button4" />
    <Button
        style="@style/AppBtn"
        android:background="#d73357"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5" />

</RelativeLayout>
